--- a/regression/Problem Set #6.ipynb
+++ b/regression/Problem Set #6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7ab8c5b59a45fa3eb98155739bfb9666be674b1d81ffc66b84cd8553f72d5f0b"
+  "signature": "sha256:325334f2d6a6ada16cee5dc268f2b0c079375f72e3a5af9039cc66110bea0847"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -215,18 +215,56 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "On the surface no, because \n",
+      "\n",
+      "(8.33) $Y_i = \\beta_0 + \\beta_1 X_{i1} +\\epsilon_i$\n",
+      "\n",
+      "is not the same as\n",
+      "\n",
+      "(8.49) $Y_i= \\beta_0 + \\beta_1 X_{i1} +\\beta_3 X_{i1} X_{i2} +\\epsilon_i$\n",
+      "\n",
+      "However, when we also constrain ourselves with the constraint of interpretability, we know that we must drop complex terms that include simple terms not present in our model. This means that for purposes of interpretability, we would also have to drop $\\beta_3$ from (8.49) and therefore the models would be the same."
+     ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "###8.34"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>a.)</b>\n",
+      "\n",
+      "$$Y_i = \\beta_0 + \\beta_1 X_{1i + \u03b22X2i + \u03b23X3i + \u03b5i\n",
+      "\n",
+      "for a Commercial bank the response function would be:\n",
+      "\n",
+      "Yi = (\u03b20 + \u03b22) + \u03b21X1i + \u03b5i\n",
+      "\n",
+      "for a Mutual savings:\n",
+      "\n",
+      "for a Savings and loan:\n",
+      "\n",
+      "\u03b22 here means the vertical difference in the mean of the profit or loss of the last year for\n",
+      "\n",
+      "a Commercial bank with the base line, \u03b23 is the same for a mutual savings and \u03b22 \u2212 \u03b23 is\n",
+      "\n",
+      "the same for Savings and loan bank. Not including the interactions in the model means\n",
+      "\n",
+      "that we believe the increase or decrease of the last years\u2019 profit or loss of the bank based\n",
+      "\n",
+      "on the size of bank is parallel between all three kinds of banks.\n",
+      "\n",
+      "Yi = (\u03b20 + \u03b23) + \u03b21X1i + \u03b5i\n",
+      "\n",
+      "Yi = (\u03b20 \u2212 \u03b22 \u2212 \u03b23) + \u03b21X1i + \u03b5i"
      ]
     },
     {
