--- a/regression/Problem Set #6.ipynb
+++ b/regression/Problem Set #6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:325334f2d6a6ada16cee5dc268f2b0c079375f72e3a5af9039cc66110bea0847"
+  "signature": "sha256:b44248e1b0a71b1cb92d6e8e71363d2bf1451c291cd919ec3f62e422a8f564e9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -242,7 +242,9 @@
      "source": [
       "<b>a.)</b>\n",
       "\n",
-      "$$Y_i = \\beta_0 + \\beta_1 X_{1i + \u03b22X2i + \u03b23X3i + \u03b5i\n",
+      "$$Y_i = \\beta_0 + \\beta_1 X_{1i} + \\beta_2 X_{2i} + \\beta_3 X_{3i} + \\epsilon_i$$\n",
+      "\n",
+      "<b>b.)</b>\n",
       "\n",
       "for a Commercial bank the response function would be:\n",
       "\n",
