--- a/regression/Problem Set #6.ipynb
+++ b/regression/Problem Set #6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b44248e1b0a71b1cb92d6e8e71363d2bf1451c291cd919ec3f62e422a8f564e9"
+  "signature": "sha256:0f33d92e625f1369144a2522d0b7abad68035e37fc44ec4c917d39cffd38051a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -246,27 +246,19 @@
       "\n",
       "<b>b.)</b>\n",
       "\n",
-      "for a Commercial bank the response function would be:\n",
+      "Commercial Bank: $Y_i = (\\beta_0 + \\beta_2) + \\beta_1 X_{1i} + \\epsilon_i$\n",
       "\n",
-      "Yi = (\u03b20 + \u03b22) + \u03b21X1i + \u03b5i\n",
+      "Mutual Savings:$Y_i = (\\beta_0 + \\beta_3) + \\beta_1 X_{1i} + \\epsilon_i$\n",
       "\n",
-      "for a Mutual savings:\n",
+      "Savings and Loan:$Y_i = (\\beta_0 - \\beta_2 -\\beta_3) + \\beta_1 X_{1i} + \\epsilon_i$\n",
       "\n",
-      "for a Savings and loan:\n",
+      "<b>c.)</b>\n",
       "\n",
-      "\u03b22 here means the vertical difference in the mean of the profit or loss of the last year for\n",
+      "(1) $\\beta_2$ here is the amount the model changes if you are a Commercial Bank.  \n",
       "\n",
-      "a Commercial bank with the base line, \u03b23 is the same for a mutual savings and \u03b22 \u2212 \u03b23 is\n",
+      "(2) $\\beta_3$ here is the amount the model changes if you are a Mutual Savings.\n",
       "\n",
-      "the same for Savings and loan bank. Not including the interactions in the model means\n",
-      "\n",
-      "that we believe the increase or decrease of the last years\u2019 profit or loss of the bank based\n",
-      "\n",
-      "on the size of bank is parallel between all three kinds of banks.\n",
-      "\n",
-      "Yi = (\u03b20 + \u03b23) + \u03b21X1i + \u03b5i\n",
-      "\n",
-      "Yi = (\u03b20 \u2212 \u03b22 \u2212 \u03b23) + \u03b21X1i + \u03b5i"
+      "(3) $\\beta_3+\\beta_2$ here is the amount the model changes if you are a Savings and Loans."
      ]
     },
     {
@@ -307,12 +299,80 @@
       "  115.0   94.0  121.0  115.0  104.0\n",
       "   83.0   91.0  129.0   97.0   83.0\"\n",
       "x <- matrix(as.numeric(strsplit(s,\" +|\\\\n +\")[[1]]), ncol= 5, byrow = T)\n",
-      "fit <- lm(x[,1] ~ x[,2]+x[,3]+x[,4]+x[,5])"
+      "fit <- lm(x[,1] ~ x[,2]+x[,3]+x[,4]+x[,5])\n",
+      "library(\"MASS\")\n",
+      "stepAIC(fit)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "Start:  AIC=74.95\n",
+        "x[, 1] ~ x[, 2] + x[, 3] + x[, 4] + x[, 5]\n",
+        "\n",
+        "         Df Sum of Sq     RSS     AIC\n",
+        "- x[, 3]  1     12.22  348.20  73.847\n",
+        "<none>                 335.98  74.954\n",
+        "- x[, 5]  1    260.74  596.72  87.314\n",
+        "- x[, 2]  1    759.83 1095.81 102.509\n",
+        "- x[, 4]  1   1064.15 1400.13 108.636\n",
+        "\n",
+        "Step:  AIC=73.85\n",
+        "x[, 1] ~ x[, 2] + x[, 4] + x[, 5]\n",
+        "\n",
+        "         Df Sum of Sq     RSS     AIC\n",
+        "<none>                 348.20  73.847\n",
+        "- x[, 5]  1    258.46  606.66  85.727\n",
+        "- x[, 2]  1    763.12 1111.31 100.861\n",
+        "- x[, 4]  1   1324.39 1672.59 111.081\n",
+        "\n",
+        "Call:\n",
+        "lm(formula = x[, 1] ~ x[, 2] + x[, 4] + x[, 5])\n",
+        "\n",
+        "Coefficients:\n",
+        "(Intercept)       x[, 2]       x[, 4]       x[, 5]  \n",
+        "  -124.2000       0.2963       1.3570       0.5174  \n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Unfortunately, I can't seem to get PRESS to work in R. Step AIC tells me that we should not use $X_2$, therefore, I have"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "summary(aov(x[,1] ~ x[,2]+x[,4]+x[,5]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "            Df Sum Sq Mean Sq F value   Pr(>F)    \n",
+        "x[, 2]       1   2396    2396  144.50 7.05e-11 ***\n",
+        "x[, 4]       1   6051    6051  364.97 9.36e-15 ***\n",
+        "x[, 5]       1    258     258   15.59 0.000735 ***\n",
+        "Residuals   21    348      17                     \n",
+        "---\n",
+        "Signif. codes:  0 \u2018***\u2019 0.001 \u2018**\u2019 0.01 \u2018*\u2019 0.05 \u2018.\u2019 0.1 \u2018 \u2019 1\n"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -324,11 +384,88 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%%R\n",
+      "s <- \"64.0    4.0    2.0\n",
+      "   73.0    4.0    4.0\n",
+      "   61.0    4.0    2.0\n",
+      "   76.0    4.0    4.0\n",
+      "   72.0    6.0    2.0\n",
+      "   80.0    6.0    4.0\n",
+      "   71.0    6.0    2.0\n",
+      "   83.0    6.0    4.0\n",
+      "   83.0    8.0    2.0\n",
+      "   89.0    8.0    4.0\n",
+      "   86.0    8.0    2.0\n",
+      "   93.0    8.0    4.0\n",
+      "   88.0   10.0    2.0\n",
+      "   95.0   10.0    4.0\n",
+      "   94.0   10.0    2.0\n",
+      "  100.0   10.0    4.0\"\n",
+      "x <- strsplit(s,\" +|\\\\n +\")\n",
+      "data <-matrix(as.numeric(x[[1]]), ncol=3, byrow =T)\n",
+      "fit <-lm(data[,1] ~ data[,2]+data[,3]+data[,2]*data[,3])\n",
+      "summary(fit)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "\n",
+        "Call:\n",
+        "lm(formula = data[, 1] ~ data[, 2] + data[, 3] + data[, 2] * \n",
+        "    data[, 3])\n",
+        "\n",
+        "Residuals:\n",
+        "   Min     1Q Median     3Q    Max \n",
+        "-4.150 -1.488  0.125  1.700  3.700 \n",
+        "\n",
+        "Coefficients:\n",
+        "                    Estimate Std. Error t value Pr(>|t|)    \n",
+        "(Intercept)          27.1500     6.4648   4.200  0.00123 ** \n",
+        "data[, 2]             5.9250     0.8797   6.735 2.09e-05 ***\n",
+        "data[, 3]             7.8750     2.0444   3.852  0.00230 ** \n",
+        "data[, 2]:data[, 3]  -0.5000     0.2782  -1.797  0.09749 .  \n",
+        "---\n",
+        "Signif. codes:  0 \u2018***\u2019 0.001 \u2018**\u2019 0.01 \u2018*\u2019 0.05 \u2018.\u2019 0.1 \u2018 \u2019 1\n",
+        "\n",
+        "Residual standard error: 2.488 on 12 degrees of freedom\n",
+        "Multiple R-squared:  0.9622,\tAdjusted R-squared:  0.9528 \n",
+        "F-statistic: 101.9 on 3 and 12 DF,  p-value: 8.379e-09\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "stu.del.res <- studres(fit)\n",
+      "stu.del.res"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "         1          2          3          4          5          6          7 \n",
+        " 0.6821342 -0.6567984 -0.7846789  0.8106415 -0.1881059 -0.9554960 -0.6154781 \n",
+        "         8          9         10         11         12         13         14 \n",
+        " 0.3355786  0.2932796 -0.4420852  1.7448137  1.3258960 -2.4692004 -1.5229637 \n",
+        "        15         16 \n",
+        " 0.9159630  1.0513749 \n"
+       ]
+      }
+     ],
+     "prompt_number": 33
     }
    ],
    "metadata": {}
