--- a/regression/Problem Set #6.ipynb
+++ b/regression/Problem Set #6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0f33d92e625f1369144a2522d0b7abad68035e37fc44ec4c917d39cffd38051a"
+  "signature": "sha256:3934d447e1c6392f7b26402cca8c91154faee941b968f12894557877c0dffc83"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -447,7 +447,9 @@
      "input": [
       "%%R\n",
       "stu.del.res <- studres(fit)\n",
-      "stu.del.res"
+      "cat(abs(stu.del.res) ,\"\\n\")\n",
+      "alpha = 0.01\n",
+      "qt(1-alpha/3,12)"
      ],
      "language": "python",
      "metadata": {},
@@ -456,16 +458,57 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "         1          2          3          4          5          6          7 \n",
-        " 0.6821342 -0.6567984 -0.7846789  0.8106415 -0.1881059 -0.9554960 -0.6154781 \n",
-        "         8          9         10         11         12         13         14 \n",
-        " 0.3355786  0.2932796 -0.4420852  1.7448137  1.3258960 -2.4692004 -1.5229637 \n",
-        "        15         16 \n",
-        " 0.9159630  1.0513749 \n"
+        "0.6821342 0.6567984 0.7846789 0.8106415 0.1881059 0.955496 0.6154781 0.3355786 0.2932796 0.4420852 1.744814 1.325896 2.4692 1.522964 0.915963 1.051375 \n",
+        "[1] 3.27295\n"
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>a.)</b>Because all the studentized residuals are less than 3.27, we conclude that there are no outliers.\n",
+      "\n",
+      "<b>b.)</b>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "X <- matrix(c(rep(1,16), data[,2],data[,3]), ncol = 3)\n",
+      "hatMatrix <- t(X)%*%(solve())\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14]\n",
+        "[1,]    1    1    1    1    1    1    1    1    1     1     1     1     1     1\n",
+        "[2,]    4    4    4    4    6    6    6    6    8     8     8     8    10    10\n",
+        "[3,]    2    4    2    4    2    4    2    4    2     4     2     4     2     4\n",
+        "     [,15] [,16]\n",
+        "[1,]     1     1\n",
+        "[2,]    10    10\n",
+        "[3,]     2     4\n"
+       ]
+      }
+     ],
+     "prompt_number": 40
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
