--- a/regression/Problem Set #6.ipynb
+++ b/regression/Problem Set #6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3934d447e1c6392f7b26402cca8c91154faee941b968f12894557877c0dffc83"
+  "signature": "sha256:4813ec0a248bbde9a6bd39603b451199aea9627eccd2571e6af7ab2c502d54f8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -480,7 +480,8 @@
      "input": [
       "%%R\n",
       "X <- matrix(c(rep(1,16), data[,2],data[,3]), ncol = 3)\n",
-      "hatMatrix <- t(X)%*%(solve())\n"
+      "hatMatrix <- X%*%(solve(t(X)%*%X))%*%t(X)\n",
+      "hatMatrix"
      ],
      "language": "python",
      "metadata": {},
@@ -489,26 +490,53 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14]\n",
-        "[1,]    1    1    1    1    1    1    1    1    1     1     1     1     1     1\n",
-        "[2,]    4    4    4    4    6    6    6    6    8     8     8     8    10    10\n",
-        "[3,]    2    4    2    4    2    4    2    4    2     4     2     4     2     4\n",
-        "     [,15] [,16]\n",
-        "[1,]     1     1\n",
-        "[2,]    10    10\n",
-        "[3,]     2     4\n"
+        "         [,1]    [,2]    [,3]    [,4]    [,5]    [,6]    [,7]    [,8]    [,9]\n",
+        " [1,]  0.2375  0.1125  0.2375  0.1125  0.1625  0.0375  0.1625  0.0375  0.0875\n",
+        " [2,]  0.1125  0.2375  0.1125  0.2375  0.0375  0.1625  0.0375  0.1625 -0.0375\n",
+        " [3,]  0.2375  0.1125  0.2375  0.1125  0.1625  0.0375  0.1625  0.0375  0.0875\n",
+        " [4,]  0.1125  0.2375  0.1125  0.2375  0.0375  0.1625  0.0375  0.1625 -0.0375\n",
+        " [5,]  0.1625  0.0375  0.1625  0.0375  0.1375  0.0125  0.1375  0.0125  0.1125\n",
+        " [6,]  0.0375  0.1625  0.0375  0.1625  0.0125  0.1375  0.0125  0.1375 -0.0125\n",
+        " [7,]  0.1625  0.0375  0.1625  0.0375  0.1375  0.0125  0.1375  0.0125  0.1125\n",
+        " [8,]  0.0375  0.1625  0.0375  0.1625  0.0125  0.1375  0.0125  0.1375 -0.0125\n",
+        " [9,]  0.0875 -0.0375  0.0875 -0.0375  0.1125 -0.0125  0.1125 -0.0125  0.1375\n",
+        "[10,] -0.0375  0.0875 -0.0375  0.0875 -0.0125  0.1125 -0.0125  0.1125  0.0125\n",
+        "[11,]  0.0875 -0.0375  0.0875 -0.0375  0.1125 -0.0125  0.1125 -0.0125  0.1375\n",
+        "[12,] -0.0375  0.0875 -0.0375  0.0875 -0.0125  0.1125 -0.0125  0.1125  0.0125\n",
+        "[13,]  0.0125 -0.1125  0.0125 -0.1125  0.0875 -0.0375  0.0875 -0.0375  0.1625\n",
+        "[14,] -0.1125  0.0125 -0.1125  0.0125 -0.0375  0.0875 -0.0375  0.0875  0.0375\n",
+        "[15,]  0.0125 -0.1125  0.0125 -0.1125  0.0875 -0.0375  0.0875 -0.0375  0.1625\n",
+        "[16,] -0.1125  0.0125 -0.1125  0.0125 -0.0375  0.0875 -0.0375  0.0875  0.0375\n",
+        "        [,10]   [,11]   [,12]   [,13]   [,14]   [,15]   [,16]\n",
+        " [1,] -0.0375  0.0875 -0.0375  0.0125 -0.1125  0.0125 -0.1125\n",
+        " [2,]  0.0875 -0.0375  0.0875 -0.1125  0.0125 -0.1125  0.0125\n",
+        " [3,] -0.0375  0.0875 -0.0375  0.0125 -0.1125  0.0125 -0.1125\n",
+        " [4,]  0.0875 -0.0375  0.0875 -0.1125  0.0125 -0.1125  0.0125\n",
+        " [5,] -0.0125  0.1125 -0.0125  0.0875 -0.0375  0.0875 -0.0375\n",
+        " [6,]  0.1125 -0.0125  0.1125 -0.0375  0.0875 -0.0375  0.0875\n",
+        " [7,] -0.0125  0.1125 -0.0125  0.0875 -0.0375  0.0875 -0.0375\n",
+        " [8,]  0.1125 -0.0125  0.1125 -0.0375  0.0875 -0.0375  0.0875\n",
+        " [9,]  0.0125  0.1375  0.0125  0.1625  0.0375  0.1625  0.0375\n",
+        "[10,]  0.1375  0.0125  0.1375  0.0375  0.1625  0.0375  0.1625\n",
+        "[11,]  0.0125  0.1375  0.0125  0.1625  0.0375  0.1625  0.0375\n",
+        "[12,]  0.1375  0.0125  0.1375  0.0375  0.1625  0.0375  0.1625\n",
+        "[13,]  0.0375  0.1625  0.0375  0.2375  0.1125  0.2375  0.1125\n",
+        "[14,]  0.1625  0.0375  0.1625  0.1125  0.2375  0.1125  0.2375\n",
+        "[15,]  0.0375  0.1625  0.0375  0.2375  0.1125  0.2375  0.1125\n",
+        "[16,]  0.1625  0.0375  0.1625  0.1125  0.2375  0.1125  0.2375\n"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 42
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Along the diagonal, we have only two values. Either 0.2375 or 0.1375. I don't have an interpretatio for this\n",
+      "\n",
+      "<b>c.)</b> "
+     ]
     }
    ],
    "metadata": {}
