--- a/regression/Problem Set #6.ipynb
+++ b/regression/Problem Set #6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4813ec0a248bbde9a6bd39603b451199aea9627eccd2571e6af7ab2c502d54f8"
+  "signature": "sha256:968a34fae464d29abd35aff5d8d3bf0c8f963873ed1689d274d69a2ceeb0d5b5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -533,9 +533,36 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Along the diagonal, we have only two values. Either 0.2375 or 0.1375. I don't have an interpretatio for this\n",
+      "Along the diagonal, we have only two values. Either 0.2375 or 0.1375. Meaning that about half of the values are twice as important as the other values.\n",
       "\n",
-      "<b>c.)</b> "
+      "<b>c.)</b> According to the rule of thumb presented in this chapter we would conclude that there are no outliers because the diagonal weights are all about the same.\n",
+      "\n",
+      "<b>d.)</b> "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "plot(data[,2],data[,3])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAMAAABKCk6nAAAC3FBMVEUAAAABAQECAgIDAwMEBAQF\nBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw8QEBARERESEhITExMUFBQVFRUWFhYXFxcY\nGBgZGRkaGhobGxscHBwdHR0eHh4fHx8gICAhISEiIiIjIyMkJCQlJSUmJiYnJycoKCgpKSkqKior\nKyssLCwtLS0uLi4vLy8wMDAxMTEyMjIzMzM0NDQ1NTU3Nzc4ODg5OTk6Ojo7Ozs8PDw9PT0+Pj4/\nPz9AQEBBQUFCQkJDQ0NERERFRUVGRkZHR0dISEhJSUlLS0tMTExNTU1OTk5PT09QUFBRUVFSUlJT\nU1NUVFRVVVVWVlZXV1dYWFhZWVlaWlpbW1tcXFxdXV1eXl5fX19gYGBhYWFiYmJjY2NkZGRlZWVm\nZmZnZ2doaGhpaWlqampra2tsbGxtbW1ubm5vb29wcHBxcXF0dHR1dXV2dnZ3d3d4eHh5eXl6enp7\ne3t8fHx9fX1+fn5/f3+CgoKDg4OEhISFhYWGhoaHh4eIiIiJiYmKioqLi4uMjIyNjY2Ojo6Pj4+Q\nkJCRkZGSkpKTk5OUlJSVlZWWlpaXl5eYmJiZmZmampqbm5ucnJydnZ2enp6goKChoaGioqKjo6Ok\npKSmpqanp6eoqKipqamqqqqrq6usrKytra2urq6vr6+wsLCysrKzs7O0tLS1tbW2tra3t7e4uLi5\nubm6urq7u7u8vLy9vb2+vr6/v7/AwMDBwcHCwsLDw8PExMTFxcXGxsbHx8fIyMjJycnKysrLy8vM\nzMzPz8/Q0NDR0dHS0tLT09PV1dXW1tbX19fY2NjZ2dna2trb29vc3Nzd3d3e3t7f39/g4ODh4eHi\n4uLj4+Pk5OTl5eXm5ubn5+fo6Ojp6enq6urr6+vs7Ozt7e3u7u7v7+/w8PDx8fHy8vLz8/P09PT1\n9fX29vb39/f4+Pj5+fn6+vr7+/v8/Pz9/f3+/v7///8gJYEeAAAPmklEQVR4nO3d+2NT5QHG8dCC\nEUppIKDSYmVAC+IQuQw6QAGtN5CL0KKTIeBkUzeFoQiCTsWpOK+jMhDcBtYJFnSujIsUYRZxjioW\ndLZcSm+UW0vT9v0HdhKxTU+ScvK+p8nbZ8/3h/T0vOfNCXza5OQ0bRyCQeeI9g1grRuBwSMweAQG\nj8DgERg8AoNHYPAIDB6BwSMweAQGj8DgERg8AoNHYPAIDB6BwSMweAQGj8DgERg8AoNHYPAIDB6B\nwSMweAQGj8DgERg8AoNHYPAIDB6BwSMweAQGj8DgERg8AoNHYPAIDB6BwSMweAQGj8DgERg8AoNH\nYPAIDB6BwSMweAQGj8DgERg8AoNHYPAIDJ4CcNmbWSz6vVXbWsAb7o72v40ZjSpsNeDX5ecy25pL\nYOwIDJ4dwPVV9UHWEliLlIGrl6a0d8T2W1ZjHiCwFikDz0zfUVZbvnvKHPMAgbVIGTjhqO/D2e7m\nAQJrkTLw4DW+D+8NMQ8QWIuUgfN7DsyYmzEocZ95oDlw9Z7qcG+aPX37n+jst35vZXR2XP5ps0/V\nj6I9uVnLs3I9AeubAc9x9XfNsnLzbK44uVcf97Yo7HiFK7X7yGBPLlo5z/AeKa7X/FbY9Ty4OMe8\nxh94zZUe4en9ptUrs6/+zwix0xX5/RYklAqRfk/kdzxtghDHuxxuWmEXcHZc4+K/lvua/EDT6I3P\nGRcv32D5ZtqWzzb5s4jvd8lE4+Jwz4jvV1zuPea95emmFa1wJqs419edU5tW3bHMuHj6NokrU6yr\n9yLx24jv97l04+Kz3hHfr+h10Li44ZWmFTYB7wk4zyEeyWxa3tqtUBR2+9DildnY6MnGf3Zi5Pdb\n0mWrqOq7JPI7XtD/rPiwS3nTCpuA3UUBq/yBxYrL3D2et3hddnZ6jLv71V9FYcfv93K774vCfsVM\ntzv5I7/PlYHjYr05YmLNA82AWbRSBj6QNv1QaWnXz0vNAwTWIvW76LqX+m+56F00i1Z2PAYXjr0n\nnsCaZstBVn1WZlnASgJrUeu9ooPAWkRg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaP\nwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHB\nIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg\n8AgMHoHBIzB4BAaPwOARGDx7gE9UBq4jsBYpA0/4ThSNjOkw7oh5gMBapAzsLBAZ956tXTjFPEBg\nLbIDuM+XQlR2MQ8QWIvUgbd5Jm4R4uNE8wCBtUgZOD3Z6RogtrtWmAcIrEU2HEXXFuaJvdsDVhNY\ni+x6Hlyc07hYV+HrVxnyt4rZll3A2XGNiznTfaXcJH+rmG3xTBZ4NgHXBK4isBYpA594YPRvjw92\nDP/aPEBgLVIGvuPW9XN7Lq9YfKt5gMBapAwcd1KUOcrFqXjzAIG1SBk4OV80rBei4ArzAIG1SBl4\nTcKkOiHWpiwxDxBYi9SPor9eWy/Eqo0N5vUE1iI+DwaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOAR\nGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4\nBAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOBZAV7sl/VrJrAW\nWQF2PtWY0/o1E1iLrABPbfp8aqgNAyOwFll/DA7y9oQtRmAtsgIc8u0JW4zAWmQFOOTbE7YYgbXI\nCnDItydsMQJrkRXgkG9P2GIE1iIrwCHfnrDFCKxFlo6iQ709YYsRWIt4qhI8AoNHYPDCAC7Oya8L\nulF9VX2QtQTWojCAs+M2LwvconppSntHbL9lAWcyCaxFynfRM9N3lNWW754yxzxAYC2yApzQ9HlC\nwBYJR30fznY3DxBYi6wAx4xqLCZgi8FrfB/eG2IeILAWWQHe5VfAFvk9B2bMzRiUuM88QGAtCuMx\nuO7toJt4crOWZ+V6AtYTWIusAR+cl5mZmd67hQ2Lc8xrCKxF1oBHzHps/NqhH7SwYXZc4+Lf7/c1\n6GYbbh5TzRqws6xmlMhLs3aVVYd8zZ6meNOYHVkDTvxYjDhR0in0dkFesMW7aC2yBvz6JYefHpZ2\nY7AtQr5gi8BaZA34TMm5uvWvFAfbIuQLtgisRVaAPZ5kj1FF0NdkhXzBFoG1yApwbKwj1tuMYFuE\nfMEWgbXI2l10eugtQr5gi8BapH4mK9QLtgisRXadyQqMwFpk15mswAisRa1wJutCBNYim85kBYnA\nWqR8JitkBNYii0fRvjNZlWFdM4G1iK+LBs/Si+6+z5UU1jUTWIusAFdWvjgu7+ie9NVhXTOBtcja\nXXQv7w+SjvcK65oJrEUWnyZ5X025+8qwrpnAWmQN+KVui1Yt6vZqWNdMYC2yeBS94zeZ83eHd80E\n1iI+TQKPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg\n8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOAR\nGDwCg0dg8AgMHoHBIzB4BAaPwOARGDx7gE8Eedc7AmuRMvCE70TRyJgO446YBwisRcrAzgKRce/Z\n2oVTzAME1iI7gPt8KURlF/MAgbVIHXibZ+IWIT5ONA8QWIuUgdOTna4BYrtrhXmAwFpkw1F0bWGe\n2Ls9YDWBtciu58HFOY2LZw75mj1d+kYx+7ILODuucfHD+30NSpe/Vcy2eCYLPBuAKxqMi7pS82oC\na5Ey8IFr2vUxHn+/CdiSwFqkDHz9E+d3JuUTWNeUgTueEmLTsDoCa5oycOpmIRomP05gTVMG3th5\ndIkoHXIdgfVM/Sj62EbjTrpm/ULzegJrEZ8Hg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHB\nIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg\n8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOARGDwCg0dg8AgMHoHBIzB4BAaPwOAR\nGDwCg0dg8AgMHoHBIzB4BAaPwODZAVxfVR9kLYG1SBm4emlKe0dsv2U15gECa5Ey8Mz0HWW15bun\nzDEPEFiLlIETjvo+nO1uHiCwFikDD17j+/DeEPMAgbVIGTi/58CMuRmDEveZB5oDr1nwfrg3zZaO\nL33ycFR2vGXB6mCHnq1e9fJFzSjUj6I9uVnLs3I9AeubAfdLvSs1NQr/4I/ibpuS8FTk9ytuvzxz\nhLs08vs9mpCWcfk0vxV2PQ8uzjGv8QdemmZcjFlk9crsK3Gb8U0cH/mvrF1XGPtcMC7i+xU/XWI8\nbe3h9z1sF3B2XOPiuzf5uurmptExrxkXq9Is30zbcnkv+u6O+H4XTDcuSntEfL/Cfdq4mLS4aUXr\nncna8HrT8l3zjIuHpstfmWwu77+3a3nE97tyuHGxqX/E9yv6bjUuBq9rWmEDcEWDcVEX8HjjD3yw\nywtVK7p8Zekm2tq83p8eHj808vut7v7r8ne6vhP5Ha/rtrH0l5f5HREpAx+4pl0f4/H3m4At/YHF\nF0O7D/nc8q20sWeu7Dk78ACw9Su9sUdqVJ43ZPfrcUul3+fKwNc/cX5nUv7FgFm0UgbueMp4sBlW\nR2BNUwZO3SxEw+THCaxpysAbO48uEaVDriOwnqkfRR/baNxJ16xfaF5PYC2KzPNgFrUIDB6BwSMw\neK0H/FHKMP86KXRJR/m5lzoVdtwhSnOdlypMdjX7f0850lrApsYqzH14v/zcf/xOYccqN3qqwo84\nVq+Vn1uSEc7WBJaOwNYjcBgROIwIbD0ChxGBrUfgFrMPOF1h7vwv5Of+81mFHavc6GmVF98mVG/9\nWX5u6YxwtrYPOOB3lyI0t742SjtWmeupi9SO7QNmWkZg8AgMHoHBIzB4BAaPwOARGDz7gAviLr5N\n8NKdTucE2clHbokf8aXc1BVOb3lyk1de1fGGArmp4o+9XXedlpt6m3ef+4a4Zlk922EbcF1arOzU\n5G0FBd/JTv7JC8fmS55RLisoKMi95qzU3K87bD32oOSvB29L2lrx0IMyM7fe5zCAPYmrj9y01OIU\n24Bfmi4LXOtU+OWx/QMaRI3Cb73N3Cs372j83lML7pSbu8zALXbLzHz+wU4G8NarhdiRYnGKXcCF\n/Q/JAhe6JvaZUSQ5ed2kX6RM/a/kZCHy7pad+YajnbtMbupfBhaeftJxRmpukgGclWHc+7S3+FcN\nbAKuH7e5VBY4b8Dmgp/L/nGA52NWHnxopORkUT9c8uFbFCTuOffoRMm9zmvfeb5D7u97eIGXzzXu\n9hxV1ibYBJz1MyEN7O1MzAm5ia8aj7/VsbJ/DOUT6T+y8XvjP7nGeVJy9vmaIqvfgaZ++A4uj43s\nd3BmvLurw71Hau7e7cYXZAfJH65uMoDPd6iQmywW/Elyonh2tvcLS+5G739MiL9K/lUCL3DuICF2\n97U4wSbgsqKiz2OK5H5Cut216+Sjst9K59zrqxaOkZzc0Ef64P3frp0n518vN7es87uHBqyUm5vk\nO4redG7qMosT7HseLH8X/WLP+Ektv3q7hXZd2/lW2YOs/UmyexViQ2rn22W/PP6WlLS0QW6qF1h8\neq373og/D2Z6RmDwCAwegcEjMHgEBo/A4BEYPAKDR2DwCAwegcEjMHgEBo/A4BEYPAKDR2DwCAwe\ngcH7/wKuTGhcjP3h92V2xfywclP/TmMPiKnOxQHz2nAE3jXqwsKx+M1VS34sxFMEbpv9oVevFw3g\nN5IuHXlQpDuSz3y/1Ai8cbQQ59tVELiNtqPrzqKxCaLkkh2ls+Z5v4MvLDUCnyoRYuePGgjcRnv4\nMSHyEsS5w6JmUaYX+MJSI7AQDZuS3udddFstc5X37bNF/TMjR433AV9YagIumzIsXxC4rfbIIiH2\nJIgNw0rEOh/whaVG4Jqhj/v+giSB22Z57k9KbnaJl9NOfDIsvU7EVlxY8gJnFxsbrB/8jVEdgdtq\nLyclrU4SFeM7jvzgqrfFjPii75e8wHE5xvhCh7dSAoPlBd6c77eCwFh5gZ/w//PNBMaq6VTl9/FU\nJWtLERg8AoNHYPAIDB6BwSMweAQGj8DgERg8AoNHYPAIDB6BwSMweAQG738snm/UKBSYPQAAAABJ\nRU5ErkJggg==\n"
+      }
+     ],
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Apparently the point (10,3) is within the scope of the model and we would therefore be able to make predictions at these values."
      ]
     }
    ],
